fixed navbar dropdown on small displays

--- a/style.css
+++ b/style.css
@@ -17,3 +17,6 @@ p {
     margin: 30px;
 }   
 
+#footer-nav {
+    font-size: 16px;
+}
